--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,21 +12,19 @@
     </head>
     <body>
       <nav>
-      <ul>
-        <li> <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-        </li>
-        <li>
+        <div> <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+        </div>
+        <div>
         <h1 class="title"><a href="/about">About</a></h1>
-        </li>
-        <li>
+        </div>
+        <div>
         <h1 class="title"><a href="/contact">Contact</a></h1>
-        </li>
-      </ul>
+        </div>
       </nav>
 
       <div class="content">
       {{ content }}
-    </div>
+      </div>
 
       <footer>
       <h1>This is a footer down here.</h1>
