Footer content and style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
       </div>
 
       <footer>
-      <h1>This is a footer down here.</h1>
+      <div><center> © Compoucher 2014 Built with love in Colorado</center> </div>
       </footer>
 
     </body>
