--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,13 @@
     </head>
     <body>
       <nav>
-        <div> <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+      <div> <a href="/"> <h1>{{ site.name }} </h1></a>
         </div>
         <div>
-        <h1 class="title"><a href="/about">About</a></h1>
+          <a href="/about"><h1 class="title">About</h1></a>
         </div>
         <div>
-        <h1 class="title"><a href="/contact">Contact</a></h1>
+          <a href="/contract"> <h1 class="title">Contact</h1></a>
         </div>
       </nav>
 
