--- a/sassys/style.scss
+++ b/sassys/style.scss
@@ -18,10 +18,20 @@ body {
 nav {
   @include outer-container;
   width: 100%;
-  background-color: $body-color;
+  background-color: rgba(255,255,255, 0.4);
 
   div {
     @include span-columns(4);
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  a h1 {
+    text-shadow: 0px 2px 2px #efe;
+    font-weight: 200;
   }
 }
 
