nav css transition

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,13 @@
     </head>
     <body>
       <nav>
-      <div> <a href="/"> <h1>{{ site.name }} </h1></a>
+      <div> <a class='green' href="/"> <h1>{{ site.name }} </h1></a>
         </div>
         <div>
-          <a href="/about"><h1 class="title">About</h1></a>
+          <a class = 'red' href="/about"><h1 class="title">About</h1></a>
         </div>
         <div>
-          <a href="/contract"> <h1 class="title">Contact</h1></a>
+          <a class = 'yellow' href="/contract"> <h1 class="title">Contact</h1></a>
         </div>
       </nav>
 
