--- a/sassys/style.scss
+++ b/sassys/style.scss
@@ -67,6 +67,11 @@ div#brag {
     font-size: 30pt;
     font-weight:100;
   }
+ @include media(min-width 320px max-width 480px, 6) {
+
+ h1, h2 {
+	font-size: 2rem;
+} }
 }
 
 div.frontcopy {
