--- a/sassys/style.scss
+++ b/sassys/style.scss
@@ -35,6 +35,7 @@ nav {
   a h1 {
     text-shadow: 0px 1px 0px #efe;
     font-weight: 200;
+    text-align: center;
   }
 }
 
@@ -45,7 +46,7 @@ span.orange {
 div.content {
   @include outer-container;
   min-height: 100%;
-  margin: 0 auto -100px;
+  margin: 0 auto -30px;
   background-color: $body-color;
 }
 
@@ -111,7 +112,7 @@ div.frontcopy {
 footer {
   @include outer-container;
   background-color: $body-color;
-  height: 100px;
+  height: 30px;
   position: relative;
   div {
    position: absolute;
