--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="/css/syntax.css">
         <link rel="stylesheet" href="/css/style.css">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     </head>
     <body>
