--- a/sassys/style.scss
+++ b/sassys/style.scss
@@ -59,7 +59,7 @@ div#brag {
   height: 320px;
   border-bottom:1px solid #5D9DBD;
 
-  h1, h2 {
+  h1, h2{
     text-align: center;
     font-size: 4rem;
     font-weight: 200;
@@ -85,6 +85,12 @@ div.frontcopy {
   font-weight: 300;
  }
 
+ h3 {
+   text-align: center;
+   font-size: 20pt;
+   font-weight: 100;
+ }
+
  div.last {
    @include omega();
  }
@@ -108,6 +114,12 @@ div.frontcopy {
 	right: 0;
 	background: rgba(83,174,224,0.685);
 }
+
+div#contactus {
+  @include span-columns(12);
+  padding: 10px;
+}
+
 
 footer {
   @include outer-container;
