blog point to medium publication

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
  <nav class="bt bb tc mw7 center mt0">
     <a class="f6 f5-l link bg-animate black-80 hover-bg-lightest-blue dib pa3 ph4-l" href="/">Home</a>
     <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3
-      ph4-l" href="/posts">Microblog</a>
+      ph4-l" href="https://medium.com/compoucher" target="_blank">Microblog</a>
        <a class="f6 f5-l link bg-animate black-80 hover-bg-light-pink dib pa3 ph4-l" href="/about">About</a>
      </nav>
